# animation

./: .gitignore  CMakeLists.txt  LICENSE
include/: application.h  attribute.h  shader.h  uniform.h
include/glad/: glad.h
include/math/: constants.h  mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
shaders/: basic.frag  basic.vert
src/: application.cpp  attribute.cpp  draw.cpp  glad.c  index_buffer.cpp  main.cpp  shader.cpp  texture.cpp  windows.cpp  windows.h
src/sample1/: sample1.cpp  sample1.h
test/: CMakeLists.txt
